[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harshark-next"
version = "3.1.0"
description = "Modernized offline HAR viewer with macOS light/dark mode support with saved column preferences"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI for Montel G." }
]
dependencies = [
  "PySide6>=6.11.0",
  "beautifulsoup4>=4.13.0",
  "lxml>=6.0.0",
  "darkdetect>=0.8.0",
]

[project.scripts]
harshark-next = "harshark_next.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
