[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harsharkngx"
version = "1.3.0"
description = "Modernized offline HAR viewer with macOS light/dark mode support with saved column preferences"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Montel G." }
]
dependencies = [
  "PySide6>=6.11.0",
  "beautifulsoup4>=4.13.0",
  "lxml>=6.0.0",
  "darkdetect>=0.8.0",
]

[project.scripts]
harshark-next = "harsharkngx.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
